2012-07-14 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_GraphRoutines.[C,h], src/STAT_FrontEnd.[C,h],
	src/STAT_FilterDefinitions.C src/STAT_BackEnd.[C,h], src/STAT.[i,h,C],
	src/STATBench.C, scripts/STAThelper.py, scripts/STATview.py,
	scripts/STATGUI.py, doc/src/* : added count + representative level of
	detail

2012-07-13 Gregory L. Lee <lee218@llnl.gov>
	* config/x_ac_debuglibs.m4 : fixed stackwalker test to capture older versions

2012-07-12 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added ability to view source of collapsed/joined nodes
	* scripts/STATview.py : added ability to hide MPI with collapsed/joined nodes

2012-07-07 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added repr strings for node and edge classes
	* scripts/STATview.py : don't check for $DISPLAY on Windows
	* scripts/STATview.py : don't import STAThelper components that require pygments if pygments not available
	* scripts/STATview.py : fixed handling of join with hidden nodes/edges
	* scripts/STATview.py : fixed handling of hide mpi with line info

2012-07-03 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py scripts/STAThelper.py : added routines to collapse equivalence classes

2012-06-27 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C src/STAT_FrontEnd.C src/STAT_FilterDefinitions.C src/STAT_GraphRoutines.[h,C] : fixed memory leaks

2012-06-26 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STAThelper.py scripts/STATview.py scripts/STATGUI.py : code cleanup, improved fault handling, and various optimizations

2012-06-18 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATmerge.py scripts/core_stack_merge.in scripts/bg_core_backtrace.py scripts/stat_merge_base.py src/STAT_merge.C : added files for STAT merge script
	* : updated configure/Makefile inputs to build merge tools

2012-05-03 Gregory L. Lee <lee218@llnl.gov>